deployments/k8s/cluster/minio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hl
  namespace: minio
spec:
  clusterIP: None
  ports:
    - name: http-api
      protocol: TCP
      port: 9000
      appProtocol: http
    - name: http-ui
      protocol: TCP
      port: 9001
      appProtocol: http
  sessionAffinity: None
  selector:
    app: minio
---
# 给gateway api用
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - name: http-api
      protocol: TCP
      port: 9000
      appProtocol: http
    - name: http-ui
      protocol: TCP
      port: 9001
      appProtocol: http
  selector:
    app: minio
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: minio
#   namespace: minio
# spec:
#   type: NodePort
#   ports:
#     - port: 9000
#       protocol: TCP
#       nodePort: 9000
#       name: http-api
#     - port: 9001
#       protocol: TCP
#       nodePort: 9001
#       name: http-ui
#   selector:
#     app: minio
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      kind: Gateway
      sectionName: http-minio-api
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"  # 匹配所有 API 请求
      backendRefs:
        - name: minio
          namespace: minio
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  parentRefs:
    - name: istio-gateway
      kind: Gateway
      namespace: istio-system
      sectionName: http-minio-console
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"   # 匹配 Console 根路径
      backendRefs:
        - name: minio
          namespace: minio
          port: 9001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
spec:
  serviceName: minio-hl
  podManagementPolicy: "Parallel"
  replicas: 3
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
        app.kubernetes.io/version: RELEASE.2024-12-18T13-15-44Z
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-12-18T13-15-44Z
          ports:
            - name: export
              containerPort: 9000
          volumeMounts:
            - name: time
              mountPath: /etc/localtime
              readOnly: true
            - name: export
              mountPath: /export
          args: [ "server", "http://minio-{0...2}.minio-hl:9000/export", "--console-address", ":9001", "--address", ":9000" ]
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
      volumes:
        - name: time
          hostPath:
            path: /etc/localtime
            type: File
        - name: export
          hostPath:
            path: /data/minio/export
            type: DirectoryOrCreate
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: minio
